force-app/main/default/objects/Health_Score_Component__c/Health_Score_Component__c.object-meta.xml
<CustomObject>
    <description>A weighted component within a Health Score Configuration that defines how a particular signal contributes to the overall health score.</description>
    <label>Health Score Component</label>
    <nameField><label>Health Score Component Name</label><type>Text</type></nameField>
    <pluralLabel>Health Score Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>