force-app/main/default/objects/Health_Score_Component__c/fields/Component_Code__c.field-meta.xml
<CustomField>
    <fullName>Component_Code__c</fullName>
    <label>Component Code</label>
    <type>Text</type>
    <length>30</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>