force-app/main/default/objects/Health_Score_Component__c/fields/Custom_Formula__c.field-meta.xml
<CustomField>
    <fullName>Custom_Formula__c</fullName>
    <label>Custom Formula</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>