force-app/main/default/objects/Health_Score_Component__c/fields/Fallback_Adapter__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Adapter__c</fullName>
    <label>Fallback Adapter</label>
    <type>Lookup</type>
    <referenceTo>Signal_Adapter_Config__c</referenceTo>
    <relationshipLabel>Fallback Components</relationshipLabel>
    <relationshipName>Fallback_Components</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>