force-app/main/default/objects/Health_Score_Component__c/fields/Health_Score_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Configuration__c</fullName>
    <label>Health Score Configuration</label>
    <type>MasterDetail</type>
    <referenceTo>Health_Score_Configuration__c</referenceTo>
    <relationshipLabel>Score Components</relationshipLabel>
    <relationshipName>Score_Components</relationshipName>
</CustomField>