force-app/main/default/objects/Health_Score_Component__c/fields/Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Score_Formula__c</fullName>
    <label>Score Formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Adapter_Direct</fullName><default>false</default><label>Adapter_Direct</label></value>
            <value><fullName>CRM_Activity_Recency</fullName><default>false</default><label>CRM_Activity_Recency</label></value>
            <value><fullName>CRM_Stage_Progression</fullName><default>false</default><label>CRM_Stage_Progression</label></value>
            <value><fullName>CRM_Engagement_Depth</fullName><default>false</default><label>CRM_Engagement_Depth</label></value>
            <value><fullName>CRM_Relationship</fullName><default>false</default><label>CRM_Relationship</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>