force-app/main/default/objects/Health_Score_Component__c/fields/Signal_Adapter__c.field-meta.xml
<CustomField>
    <fullName>Signal_Adapter__c</fullName>
    <label>Signal Adapter</label>
    <type>Lookup</type>
    <referenceTo>Signal_Adapter_Config__c</referenceTo>
    <relationshipLabel>Primary Components</relationshipLabel>
    <relationshipName>Primary_Components</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>