force-app/main/default/objects/Health_Score_Component__c/fields/Weight_Pct__c.field-meta.xml
<CustomField>
    <fullName>Weight_Pct__c</fullName>
    <label>Weight Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>